Added IMU support

--- a/PiDrone/CMakeLists.txt
+++ b/PiDrone/CMakeLists.txt
@@ -1,12 +1,18 @@
 cmake_minimum_required(VERSION 3.10)
 project(PiDroneProject)
 
-# Specify C++ standard
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-# Add executable target
+# Include directories (add the 'include' folder)
+include_directories(${PROJECT_SOURCE_DIR}/include)
+
+# Add source files
 add_executable(PiDrone
-    main.cpp
-    PiDrone.cpp
+    src/main.cpp
+    src/PiDrone.cpp
+    src/MPU6050.cpp
 )
+
+# Link necessary libraries
+target_link_libraries(PiDrone PRIVATE i2c pthread)
