--- a/FlightController/CMakeLists.txt
+++ b/FlightController/CMakeLists.txt
@@ -28,25 +28,43 @@ set(PICO_BOARD pico CACHE STRING "Board type")
 # Pull in Raspberry Pi Pico SDK (must be before project)
 include(pico_sdk_import.cmake)
 
-project(blink C CXX ASM)
+project(FlightController C CXX ASM)
 
 # Initialise the Raspberry Pi Pico SDK
 pico_sdk_init()
 
 # Add executable. Default name is the project name, version 0.1
 
-add_executable(blink
-    blink.c
-    )
+add_executable(FlightController FlightController.cpp )
 
-# pull in common dependencies
-target_link_libraries(blink pico_stdlib)
+pico_set_program_name(FlightController "FlightController")
+pico_set_program_version(FlightController "0.1")
 
-if (PICO_CYW43_SUPPORTED)
-    target_link_libraries(blink pico_cyw43_arch_none)
-endif()
+# Generate PIO header
+pico_generate_pio_header(FlightController ${CMAKE_CURRENT_LIST_DIR}/blink.pio)
 
-# create map/bin/hex file etc.
-pico_add_extra_outputs(blink)
+# Modify the below lines to enable/disable output over UART/USB
+pico_enable_stdio_uart(FlightController 0)
+pico_enable_stdio_usb(FlightController 0)
 
-# add url via pico_set_program_url
+# Add the standard library to the build
+target_link_libraries(FlightController
+        pico_stdlib)
+
+# Add the standard include files to the build
+target_include_directories(FlightController PRIVATE
+        ${CMAKE_CURRENT_LIST_DIR}
+)
+
+# Add any user requested libraries
+target_link_libraries(FlightController 
+        hardware_i2c
+        hardware_pio
+        hardware_interp
+        hardware_timer
+        hardware_watchdog
+        hardware_clocks
+        )
+
+pico_add_extra_outputs(FlightController)
+
