Seperated the MPU6050 of the flightcontrller from the main script. Making it easier to read

--- a/FlightController/CMakeLists.txt
+++ b/FlightController/CMakeLists.txt
@@ -35,7 +35,10 @@ pico_sdk_init()
 
 # Add executable. Default name is the project name, version 0.1
 
-add_executable(FlightController FlightController.cpp )
+add_executable(FlightController 
+    src/FlightController.cpp 
+    src/MPU6050.cpp
+)
 
 pico_set_program_name(FlightController "FlightController")
 pico_set_program_version(FlightController "0.1")
@@ -54,6 +57,7 @@ target_link_libraries(FlightController
 # Add the standard include files to the build
 target_include_directories(FlightController PRIVATE
         ${CMAKE_CURRENT_LIST_DIR}
+        ${CMAKE_CURRENT_LIST_DIR}/include
 )
 
 # Add any user requested libraries
